Mis primeros cambios en github

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <li>alcohol</li>
             <li>frascos</li>
         </ul>
+        <ol><li>Hola</li>
+            <li>Github :)</li>
+        </ol>
     </h2>
     <h2>Preparación: </h2>
 </body>
